--- a/src/ui/Input/Input.css
+++ b/src/ui/Input/Input.css
@@ -7,11 +7,9 @@
     position: absolute;
 }
 
-
-
 .input-container {
   position: relative;
-  margin-bottom: 12px;
+  margin-bottom: 19px;
 }
 
 .input {
@@ -46,7 +44,7 @@
 
 .error {
   position: absolute;
-  top: 60px;
+  top: 63px;
   width: 100%;
 }
 
